[project]
name = "pg-plonker"
version = "0.1.0"
description = "pg-plonker is a lightweight PyGame extension for plonking GUI elements down on your PyGame window"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logging>=0.4.9.6",
    "pydantic>=2.12.3",
    "pygame>=2.6.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "ruff>=0.11.6",
    "ty>=0.0.29",
]

[tool.ruff.lint]
select = [
    "F",    # Includes removing unused imports
    "I",    # isort-style import sorting
    "ANN",  # Annotation rules
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]

